--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/40582229/mqtt_message_handler#readme",
   "dependencies": {
-    "aws-sdk": "^2.1692.0"
+    "@aws-sdk/client-iot-data-plane": "^3.879.0",
+    "aws-iot-device-sdk": "^2.2.15",
+    "aws-sdk": "^2.1692.0",
+    "dotenv": "^17.2.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152"
